# lcd-demo

./: Cargo.toml  remote-run.sh  stop.sh
src/: display.rs  main.rs  slint_backend.rs
ui/: appwindow.slint
