[package]
name = "lcd-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.17.1", features = ["hal"] }
embedded-graphics = { version = "0.8.1" }
display-interface-spi = "0.4.1"
mipidsi = "0.7.1"
slint = "1.5.1"
embedded-hal = { version = "0.2.5" }
display-interface = "0.4.1"

[build-dependencies]
slint-build = "1.5.1"
